minimal-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minimal-api-deployment
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: minimal-api
  template:
    metadata:
      labels:
        app: minimal-api
    spec:
      containers:
      - name: minimal-api-container
        image: harbor.homelab.local/test-api/minimal-api:420df232513e2ddcada67a0195b86c6e4c0ff32d
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
