minimal-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minimal-api-service
  namespace: default
spec:
  selector:
    app: minimal-api # Encontra os pods criados pelo Deployment
  ports:
  - protocol: TCP
    port: 80 # A porta que o serviço vai expor internamente
    targetPort: 8080 # A porta do contêiner para onde o tráfego será enviado
